# lecture_ros2_01

./: CMakeLists.txt  README.md  package.xml
scripts/: basic_navigator_sample_01.py  basic_navigator_sample_02.py  simple_follow_path.py  simple_move.py  simple_navigate_through_poses.py  simple_navigation.py
